<resources>
    <string name="app_name">PlusOne Mentor App</string>
    <string name="Open">Open navigation Drawer</string>
    <string name="Close">Close navigation drawer</string>
    <string name="sign_out_message">Sign out</string>
    <string name="reset_password_message">Reset password</string>
    <string name="sos_message">SOS</string>
    <string name="the_ymca_logo_mess">The YMCA Logo</string>
    <string name="network_off_title">Internet is off!</string>
    <string name="OK">OK</string>
    <string name="Cancel">Cancel</string>
    <string name="close_app">Close App</string>
    <string name="user_ic_desc">Standard icon for user</string>
    <string name="right_icon_desc">Right icon</string>
    <string name="location_ic_desc">Standard icon for location</string>
    <string name="date_ic_desc">Standard icon for date</string>
    <string name="mcode_text">Mentee code</string>
    <string name="date_text">Date</string>
    <string name="new_appt_activ_name">New appointment</string>
    <string name="m_code_hint">abc345</string>
    <string name="start_time_message">Start time</string>
    <string name="end_time_message">End Time</string>
    <string name="date_message">Date</string>
    <string name="pick_date_hint">19/10/2019</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="location_hint">12 Byres Road, Glasgow</string>
    <string name="location_text">Location</string>
    <string name="time_location_icon_cd">Time location icon</string>
    <string name="save_btn_text">Save</string>
    <string name="forename_surname_text">Forename Surname</string>
    <string name="header_email_text">username@gmail.com</string>
    <string name="edit_appointment_butt_text">Edit appointment button</string>
    <string name="reason_for_not_completing_appt">Reason for not completing appt</string>
    <string name="provide_name_title">Provide your name please!</string>
    <string name="title_reason_dialog">Provide reason for canceling!</string>
    <string name="feedback_activ">Provide Feedback</string>
    <string name="reason_cancelling_appt">It was raining…</string>
    <string name="q1">How was the atmosphere in the home/with the family?</string>
    <string name="q2">How did the activity go?</string>
    <string name="q3">How do you feel the young person is progressing?</string>
    <string name="q4">Is there anything that the young person feels they need to improve on?</string>
    <string name="q5">Any other comments?</string>
    <string name="answer_question">Answer this question...</string>
    <string name="edit_appt">Edit Appointment</string>
    <string name="meeting_fdbk_question">How was your meeting?</string>
    <string name="sat_message">Satisified user button</string>
    <string name="neutral_message">Neutral user button</string>
    <string name="diss_message">Dissatisfied user button</string>
</resources>
