<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/meeting_fdbk_question"
        android:textSize="13sp"
        android:textStyle="bold"
        android:layout_margin="5dp"
        android:paddingEnd="5dp"
        android:paddingStart="5dp" />

    <EditText
        android:id="@+id/participantMessET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:importantForAutofill="no"
        android:inputType="textMultiLine"
        android:background="@drawable/edit_text_border"
        android:layout_margin="5dp"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:maxLines="3"
        android:lines="3" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="3">

        <ImageButton
            android:id="@+id/satisfiedB"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:src="@drawable/satisfied_icon"
            android:contentDescription="@string/sat_message"
            android:layout_weight="1" />

        <ImageButton
            android:id="@+id/neutralB"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:contentDescription="@string/neutral_message"
            android:src="@drawable/neutral_icon"
            android:layout_weight="1" />

        <ImageButton
            android:id="@+id/dissatisifedB"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:contentDescription="@string/diss_message"
            android:src="@drawable/dissatisfied_icon"
            android:layout_weight="1" />
    </LinearLayout>

    <Button
        android:id="@+id/saveParticipantFdbkBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save_btn_text"
        android:background="@color/greenSave" />

</LinearLayout>