<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:background="@color/colorPrimaryDark">

    <ImageView
        android:layout_width="180dp"
        android:layout_height="130dp"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="15dp"
        android:contentDescription="@string/the_ymca_logo_mess"/>


    <TextView
        android:id="@+id/userNameTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forename_surname_text"
        android:layout_marginBottom="10dp"
        android:textColor="@color/colorAccent"/>

    <TextView
        android:id="@+id/userEmailTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/header_email_text"
        android:layout_marginBottom="10dp"
        android:textColor="@color/colorAccent"/>

</LinearLayout>